--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
   </head>
 
   <body>
-    <svg></svg>
+    <svg id="scatterPlot"></svg>
+    <svg id="barChart"></svg>
     <script src='bundle.js'></script>
   </body>
 
