Making Line and Area Charts with D3.js

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
   </head>
 
   <body>
+    <svg id="lineAndArea"></svg>
+    <hr/>
     <svg id="scatterPlot"></svg>
+    <hr/>
     <svg id="barChart"></svg>
     <script src='bundle.js'></script>
   </body>
